fixed overflow issue

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -44,6 +44,7 @@
             .editor {
                 // flex: 1;
                 height: 100%;
+                max-height: 80vh;
                 // background-color: red;
             }
             .footer {
@@ -61,6 +62,9 @@
             height: 100%;
             padding: 0 20px;
             overflow-y: scroll;
+            padding-bottom: 100px;
+            box-sizing: border-box;
+            max-height: 80vh;
             @media only screen and (max-width: 600px) {
                 height: auto;
               }
